# Code-Academy

./: .gitignore  20210108_1.txt  20210108_11.txt  20210108_12.txt  20210108_17.txt  20210108_2.txt  20210108_3  20210108_4.txt  20210108_5.txt  20210108_6.txt  20210108_8.txt  20210108_9.txt  main.c  my_functions.c  prefixfile.py  questions.txt  r_schd.sh  run_schedule.py  schedule.txt
06Jun/: 20210604_1_2.sh  20210604_3_4.sh
20210108/: 20210108_16.txt  20210108_7.txt
20210111/: 20210111_0  20210111_1.c  20210111_2.c  20210111_4.c  20210111_7.c
20210113/: 20210111_11.c  20210111_12.c  20210113_01.c  20210113_02.c  20210113_04.c  20210113_06.c  20210113_09.c
20210115/: 20210115_02.c  20210115_05.c  20210115_06.c  20210115_07.c  20210115_09.c  20210115_10.c  20210115_12.c  20210115_13.c  20210115_14.c  20210115_16.c  20210115_17.c  _tasks.c
20210118/: 20210118_03.c  20210118_04.c  20210118_09.c  20210118_10.c  20210118_14.c  20210118_15.c  20210118_19.c  _tasks.c
20210120/: _tasks.c
20210125/: 20210125_01.c  20210125_03.c  20210125_05.c  20210125_06.c  20210125_09.c  20210125_10.c
20210127/: final.c  original.c  review.c
Barcode-Scanner/: CMakeLists.txt
Barcode-Scanner/include/: Data.h  Defines.h  ErrorChecks.h  Interpreter.h  LightDataReader.h  Validation.h
Barcode-Scanner/src/: Data.c  ErrorChecks.c  Interpreter.c  LightDataReader.c  Validation.c  main.c
Barcode-Scanner/tests/: test2.txt  test3.txt
Python/: Lecture01.ipynb  Lecture03.ipynb  Lecture04.ipynb  Lecture05.1.ipynb  Lecture05.2.ipynb  decorator.py  test.py
Sandbox/: decodeLetters.c  (+3 more)
(+378 files in other folders)
